--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "commit": "git-cz",
     "commitlint": "commitlint --edit $1",
+    "ts-check": "tsc --noEmit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-staged": "lint-staged",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx ./ --fix",
