--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-site3",
+  "name": "my-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^12.1.4",
@@ -43,7 +43,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
-    "postcss": "^8",
+    "postcss": "^8.1.0",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
